REF Reference imglib2

--- a/paper.tex
+++ b/paper.tex
@@ -56,7 +56,7 @@ Mahotas is a computer vision library for the Python Programming Language
 arrays~\citep{numpystructure}. Therefore, it uses all the infrastructure built
 by that project for storing information and performing basic manipulations and
 computations. In particular, unlike libraries written in the C~Language or in
-Java~\citep{Marcel:2010:TMP:1873951.1874254}, Mahotas does not need to define a
+Java~\citep{Pietzsch15112012,Marcel:2010:TMP:1873951.1874254}, Mahotas does not need to define a
 new image data structure, but uses the numpy array structure. Many basic
 manipulation functionality that would otherwise be part of a computer vision
 library are handled by numpy. For example, computing averages and other simple
