REF Add some missing references

--- a/paper.tex
+++ b/paper.tex
@@ -102,11 +102,12 @@ The main functionality is grouped into the following categories:
 \item[\textsc{Surf}] Speeded-up Robust Features~\citep{eth_biwi_00517}. This
 includes both keypoint detection and descriptor computation.
 \item[Features] Global feature descriptors. In particular, Haralick texture
-features, Zernike moments, local binary patterns, and threshold adjacency
-statistics (both the original~\citep{Hamilton2007} and the parameter-free
+features~\citep{Haralick1973}, Zernike moments, local binary
+patterns~\citep{Ojala2002}, and threshold adjacency statistics (both the
+original~\citep{Hamilton2007} and the parameter-free
 versions~\citep{Coelho2010}).
-\item[Wavelet] Haar and Daubechies wavelets. Forward and inverse transforms are
-supported.
+\item[Wavelet] Haar and Daubechies wavelets~\citep{Daubechies90}. Forward and
+inverse transforms are supported.
 \item[Morphological functions] Erosion and dilation, as well as some more
 complex operations built on these. There are both binary and grayscale
 implementations of these operators.
