--- a/references.bib
+++ b/references.bib
@@ -353,3 +353,42 @@ URL = {http://bioinformatics.oxfordjournals.org/content/28/22/3009.abstract},
 eprint = {http://bioinformatics.oxfordjournals.org/content/28/22/3009.full.pdf+html},
 journal = {Bioinformatics}
 }
+
+
+@article{Haralick1973,
+abstract = {Description of some easily computable textural features based on gray-tone spatial dependances, and illustration of their application in category-identification tasks of three different kinds of image data - namely, photomicrographs of five kinds of sandstones, 1:20,000 panchromatic aerial photographs of eight land-use categories, and ERTS multispectral imagery containing several land-use categories. Two kinds of decision rules are used - one for which the decision regions are convex polyhedra (a piecewise-linear decision rule), and one for which the decision regions are rectangular parallelpipeds (a min-max decision rule). In each experiment the data set was divided into two parts, a training set and a test set. Test set identification accuracy is 89\% for the photomicrographs, 82\% for the aerial photographic imagery, and 83\% for the satellite imagery. These results indicate that the easily computable textural features probably have a general applicability for a wide variety of image-classification applications.},
+author = {Haralick, Robert M. and Dinstein, Its'hak and Shanmugam, K.},
+file = {:home/luispedro/bibliography/organised/Haralick, Dinstein, Shanmugam/Haralick, Dinstein, Shanmugam - 1973 - Textural features for image classification.pdf:pdf},
+journal = {Ieee Transactions On Systems Man And Cybernetics},
+number = {6},
+pages = {610--621},
+publisher = {IEEE},
+title = {{Textural features for image classification}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4309314},
+volume = {3},
+year = {1973}
+}
+@article{Ojala2002,
+author = {Ojala, Timo and Pietikäinen, Matti and Mäenpää, Topi},
+doi = {10.1109/TPAMI.2002.1017623},
+issn = {0162-8828},
+journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+month = jul,
+number = {7},
+pages = {971--987},
+title = {{Multiresolution gray-scale and rotation invariant texture classification with local binary patterns}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=1017623},
+volume = {24},
+year = {2002}
+}
+
+@ARTICLE{Daubechies90,
+author={Daubechies, I.},
+journal={Information Theory, IEEE Transactions on}, title={The wavelet transform, time-frequency localization and signal analysis},
+year={1990},
+volume={36},
+number={5},
+pages={961-1005},
+keywords={Fourier transforms;signal processing;transforms;frequency analysis;reconstruction method;short time Fourier transform;signal analysis;stability;time-dependent signal;time-frequency density;time-frequency localization;wavelet transform;windowed Fourier transform;Fourier transforms;Lattices;Physics;Proposals;Reconstruction algorithms;Signal analysis;Signal resolution;Time frequency analysis;Wavelet analysis;Wavelet transforms},
+doi={10.1109/18.57199},
+ISSN={0018-9448},}
