MIN C++ compiler is needed. Update downloads
The download number is not yet at 50k, but close enough that it will
surely pass that mark before the paper is final.

--- a/paper.tex
+++ b/paper.tex
@@ -412,6 +412,9 @@ python setup.py install
 Alternatively, Python based package managers (such as \texttt{easy\_install} or
 \texttt{pip}) can be used (mahotas works well with these systems).
 
+For compiling from source, a \cpp{} compiler is needed, as well as the
+development headers for Python and numpy.
+
 \subsection{Quality Control}
 
 Mahotas includes a complete automated suite of unit tests, which tests all
@@ -501,8 +504,9 @@ forced to resort to a generic message as it does not have any knowledge of what
 the arguments mean besides their automatically inferred types).
 
 Mahotas has been available in the Python Package Index since April~2010 and has
-been downloaded over 40,000~times. This does not include any downloads from
-other sources. Mahotas includes a full test suite. There are no known bugs.
+been downloaded over fifty thousand~times. This does not include any downloads
+from other sources. Mahotas includes a full test suite. There are no known
+bugs.
 
 \subsection*{Acknowledgements}
 
