--- a/references.bib
+++ b/references.bib
@@ -392,3 +392,17 @@ pages={961-1005},
 keywords={Fourier transforms;signal processing;transforms;frequency analysis;reconstruction method;short time Fourier transform;signal analysis;stability;time-dependent signal;time-frequency density;time-frequency localization;wavelet transform;windowed Fourier transform;Fourier transforms;Lattices;Physics;Proposals;Reconstruction algorithms;Signal analysis;Signal resolution;Time frequency analysis;Wavelet analysis;Wavelet transforms},
 doi={10.1109/18.57199},
 ISSN={0018-9448},}
+
+@article{ADFM:ADFM201300091,
+author = {Ploshnik, Elina and Langner, Karol M. and Halevi, Amit and Ben-Lulu, Meirav and Müller, Axel H. E. and Fraaije, Johannes G. E. M. and Agur Sevink, G. J. and Shenhar, Roy},
+title = {Hierarchical Structuring in Block Copolymer Nanocomposites through Two Phase-Separation Processes Operating on Different Time Scales},
+journal = {Advanced Functional Materials},
+publisher = {WILEY-VCH Verlag},
+issn = {1616-3028},
+url = {http://dx.doi.org/10.1002/adfm.201300091},
+doi = {10.1002/adfm.201300091},
+pages = {n/a--n/a},
+keywords = {block copolymers, nanoparticles, microphase separation, self-assembly, hierarchical structures},
+year = {2013},
+}
+
