--- a/paper.tex
+++ b/paper.tex
@@ -184,7 +184,7 @@ values, _ = milk.kmeans(descrs, 5)
 
 Finally, we can show the points in different colours.
 \begin{python}
-colors = np.array(
+colors = np.array([
     [ 255,  25,   1],
     [203,  77,  37],
     [151, 129,  56],
