ENH Update date. Add another ref for mahotas use

--- a/paper.tex
+++ b/paper.tex
@@ -24,8 +24,10 @@
 \title{Mahotas: Open source software for scriptable computer vision}
 \author{Luis Pedro Coelho\\
 Lane Center for Computational Biology, Carnegie Mellon University\\
-Instituto de Medicina Molecular}
-\date{January 2013}
+Instituto de Medicina Molecular\footnote{Current Address: European Molecular
+Biology Laboratory (EMBL), Heidelberg, Germany.}}
+
+\date{May 2013}
 
 
 \begin{document}
@@ -477,8 +479,13 @@ make use of it.
 This package (or earlier versions of it) have been used by
 myself~\citep{Coelho2009,Coelho2010a} and close collaborators in several
 publications~\citep{omerosearcher}. Other groups have used it in published
-work, both in cell image analysis~\citep{CYTO:CYTO22034} and in other
-areas~\citep{springerlink:10.1007/978-3-642-32335-5_2,ADFM:ADFM201300091}.
+work in cell image analysis~\citep{CYTO:CYTO22034} and in other areas
+\citep{springerlink:10.1007/978-3-642-32335-5_2}. \citet{ADFM:ADFM201300091}
+used mahotas to detect nanoparticles in electron microscopy images.
+
+Mahotas provides many basic tools which can be combined to process images. It
+can be used in any problem which requires the processing of images to extract
+quantitative information.
 
 \section{Discussion}
 
