ENH call pyplot.show() at end of demo

--- a/paper.tex
+++ b/paper.tex
@@ -209,6 +209,7 @@ plt.subplot(1,2,1)
 plt.imshow(f)
 plt.subplot(1,2,2)
 plt.imshow(f2)
+plt.show()
 \end{python}
 
 The easy interaction with matplotlib is another way in which we benefit from
